# samvil

./: .git-easy.json  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  package.json
mcp/: pyproject.toml
mcp/samvil_mcp/: __init__.py  ac_leaf_schema.py  ac_search.py  ac_split.py  ac_tree.py  auto_recovery.py  brownfield_analyzer.py  build_phase_a.py  build_phase_b.py  build_phase_z.py  chain_markers.py  checklist.py  checkpoint.py  claim_ledger.py  consensus_v3_2.py  convergence_check.py  convergence_gate.py  council_synthesis.py  decision_log.py  dependency_analyzer.py  deploy_targets.py  diagnostic.py  domain_packs.py  event_store.py  evidence_validator.py  evolve_aggregate.py  evolve_apply.py  evolve_cycle.py  evolve_execution.py  evolve_loop.py  evolve_proposal.py  evolve_rebuild.py  evolve_reentry.py  final_e2e.py  gates.py  health_tiers.py  host.py  host_adapters.py  inspection.py  interview_aggregate.py  (+47 more)
mcp/tests/: test_ac_leaf_schema.py  test_ac_search.py  test_ac_split.py  test_ac_tree.py  test_ac_tree_v3.py  test_analyze_smoke.py  test_auto_recovery.py  test_build_guard.py  test_build_phase_a.py  test_build_phase_b.py  test_build_phase_z.py  test_build_smoke.py  test_chain_marker_e2e.py  test_chain_markers.py  test_checklist.py  test_checkpoint.py  test_ci_workflow.py  test_claim_ledger.py  test_convergence_check.py  test_convergence_gate.py  test_council_smoke.py  test_cross_host_equivalence.py  test_decision_log.py  test_decision_log_mcp.py  test_dependency_analyzer.py  test_deploy_smoke.py  test_doctor_smoke.py  test_dogfood_smoke.py  (+118 more)
(+306 files in other folders)
